--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Ani AngularJS Dashboard Theme</title>
+    <title>SYSBUS</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="yapp">
+  <body ng-app="sysbus">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -55,7 +55,12 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/controllers/dashboard.js"></script>
+    <!--Users-->
     <script src="scripts/controllers/user/user.list.controller.js"></script>
+    <script src="scripts/controllers/user/user.new.controller.js"></script>
+    <!--Ticket-->
+     <script src="scripts/controllers/ticket/ticket.list.controller.js"></script>
+     
     <!-- endbuild -->
   </body>
 </html>
