--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,10 @@
     <script src="scripts/controllers/user/user.list.controller.js"></script>
     <script src="scripts/controllers/user/user.new.controller.js"></script>
     <!--Ticket-->
-     <script src="scripts/controllers/ticket/ticket.list.controller.js"></script>
+    <script src="scripts/controllers/ticket/ticket.list.controller.js"></script>
+    <script src="scripts/controllers/ticket/ticket.new.controller.js"></script>
+
+
      
     <!-- endbuild -->
   </body>
