--- a/app/index.html
+++ b/app/index.html
@@ -48,9 +48,11 @@
     <script src="../bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="../bower_components/ui-router/release/angular-ui-router.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.js"></script>
+    <script src="../bower_components/highcharts/highcharts.js"></script>
+    <script src="../bower_components/highcharts/highcharts-more.js"></script>
+    <script src="../bower_components/highcharts/modules/exporting.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/login.js"></script>
@@ -61,7 +63,14 @@
     <!--Ticket-->
     <script src="scripts/controllers/ticket/ticket.list.controller.js"></script>
     <script src="scripts/controllers/ticket/ticket.new.controller.js"></script>
-
+    <!-- customer-->
+    <script src="scripts/controllers/customer/customer.list.controller.js"></script>
+    <script src="scripts/controllers/customer/customer.new.controller.js"></script>
+    <!-- bill-->
+    <script src="scripts/controllers/bill/bill.list.controller.js"></script>
+    <script src="scripts/controllers/bill/bill.new.controller.js"></script>
+    <!-- reports-->
+    <script src="scripts/controllers/reports/reports.list.controller.js"></script>
 
      
     <!-- endbuild -->
