added high charts implementation

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
     <script src="../bower_components/json3/lib/json3.js"></script>
     <![endif]-->
     <!-- endbuild -->
-
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/angular/angular.js"></script>
@@ -54,6 +54,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/controllers/dashboard.js"></script>
@@ -71,7 +72,8 @@
     <script src="scripts/controllers/bill/bill.new.controller.js"></script>
     <!-- reports-->
     <script src="scripts/controllers/reports/reports.list.controller.js"></script>
-
+    <!--Sale-->
+    <script src="scripts/controllers/sale/sale.manager.controller.js"></script>
      
     <!-- endbuild -->
   </body>
